Save LLT-filtered evts, add multiplicity histos

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ add_subdirectory(TimeCalibration)
 add_subdirectory(ScopeAnalysis)
 add_subdirectory(InterThresholdCalibration)
 add_subdirectory(modules)
-add_subdirectory(ImageReconstruction)
+#add_subdirectory(ImageReconstruction)
 add_subdirectory(MCGeantAnalysis)
 add_subdirectory(PhysicAnalysis)
 add_subdirectory(CosmicAnalysis)
